fixed spacing

--- a/style.css
+++ b/style.css
@@ -17,12 +17,13 @@ body {
 #page-intro {
   text-align: left;
   margin-top: 0;
-  margin-bottom: 1.5rem;
+  margin-bottom: 2rem;
   font-style: italic;
 }
 
 h2 {
   text-align: center;
+  margin-top: 2rem;
   margin-bottom: 0.5rem;
 }
 
